Se agrega metodo de consulta

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-8.0.27.jar=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27 /mysql-connector-java-8.0.27.jar
 user.properties.file=/Users/jhonperez/Library/Application Support/NetBeans/12.5/build.properties
