--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 compile.on.save=true
-file.reference.Librerias_Java-mysql-connector-java-8.0.27=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
-file.reference.mysql-connector-java-5.1.13-bin.jar=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
-file.reference.mysql-connector-java-8.0.27.jar=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
-file.reference.mysql-connector-java-8.0.27.jar-1=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
-user.properties.file=/Users/jhonperez/Library/Application Support/NetBeans/12.5/build.properties
+file.reference.Librerias_Java-mysql-connector-java-8.0.27=C:\\Users\\Usuario\\Videos\\mysql-installer-web-community-8.0.27.1.msi
+file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\Usuario\\Videos\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Usuario\\Videos\\mysql-installer-web-community-8.0.27.1.msi
+file.reference.mysql-connector-java-8.0.27.jar-1=C:\\Users\\Usuario\\Videos\\mysql-installer-web-community-8.0.27.1.msi
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
