--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ file.reference.Librerias_Java-mysql-connector-java-8.0.27=/Users/jhonperez/Docum
 file.reference.mysql-connector-java-5.1.13-bin.jar=/Users/jhonperez/Documents/Study/Java/mysql-connector-java-5.1.13-bin.jar
 file.reference.mysql-connector-java-8.0.27.jar=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27.jar
 file.reference.mysql-connector-java-8.0.27.jar-1=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27 /mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar-2=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.Librerias_Java-mysql-connector-java-8.0.27}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar-1}
+    ${file.reference.mysql-connector-java-8.0.27.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
