--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\Usuario\\Videos\\m
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Usuario\\Videos\\mysql-installer-web-community-8.0.27.1.msi
 file.reference.mysql-connector-java-8.0.27.jar-1=C:\\Users\\Usuario\\Videos\\mysql-installer-web-community-8.0.27.1.msi
 file.reference.mysql-connector-java-8.0.27.jar-2=C:\\Users\\Usuario\\Videos\\mysql-installer-web-community-8.0.27.1.msi
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=/Users/jhonperez/Library/Application Support/NetBeans/12.5/build.properties
