--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.mysql-connector-java-5.1.13-bin.jar=/Users/jhonperez/Documents/St
 file.reference.mysql-connector-java-8.0.27.jar=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27.jar
 file.reference.mysql-connector-java-8.0.27.jar-1=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27 /mysql-connector-java-8.0.27.jar
 file.reference.mysql-connector-java-8.0.27.jar-2=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar-3=/Users/jhonperez/Documents/Librerias Java/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.Librerias_Java-mysql-connector-java-8.0.27}:\
     ${file.reference.mysql-connector-java-8.0.27.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar-2}
+    ${file.reference.mysql-connector-java-8.0.27.jar-2}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
